deploy/openid/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openid-deployment
spec:
  selector:
    matchLabels:
      app: openid
  template:
    metadata:
      labels:
        app: openid
    spec:
      containers:
      - name: openid
        image: registry.starcatmeow.cn/dongruixuan/catmeow-auth-service/openid:openid-k8s-test
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: config
          mountPath: '/app/config'
          readOnly: true
        - name: secretkey
          mountPath: '/app/secret'
          readOnly: false
      volumes:
      - name: config
        configMap:
          name: openid
      - name: secretkey
        secret:
          secretName: usercenter_backend_secret_keys
          defaultMode: 384
