deploy/openid/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openid
spec:
  selector:
    app: openid
  ports:
  - port: 80
    targetPort: 80
