deploy/openid/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openid-ingress
  labels:
      name: openid-ingress
spec:
  rules:
  - host: openid.starcatmeow.cn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: openid
          servicePort: 80
