deploy/openid/openid.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openid
spec:
  selector:
    matchLabels:
      app: openid
  template:
    metadata:
      labels:
        app: openid
    spec:
      containers:
        - name: openid
          image: registry.starcatmeow.cn/dongruixuan/catmeow-auth-service/openid:$CI_COMMIT_TAG
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: config
              mountPath: "/app/config"
              readOnly: true
            - name: secretkey
              mountPath: "/app/secret"
              readOnly: false
      volumes:
        - name: config
          configMap:
            name: configmap.openid.starcatmeow.cn
        - name: secretkey
          secret:
            secretName: secretkeys.openid.starcatmeow.cn
            defaultMode: 256
---
apiVersion: v1
kind: Service
metadata:
  name: openid
spec:
  selector:
    app: openid
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openid
  labels:
    name: openid
spec:
  rules:
    - host: openid.starcatmeow.cn
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: openid
              servicePort: 80
